// Copyright 2015 Eryx <evorui аt gmаil dοt cοm>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package inapi;

import "inapi/base.proto";

message PbPodRepStatus {
    string                  id      = 1; // struct:object_slice_key
    uint32                  rep     = 2; // struct:object_slice_key
    string                  phase   = 3;
    repeated PbPodBoxStatus boxes   = 4;
    PbOpLogSets             oplog   = 5;
    uint32                  updated = 6;
}

enum PbPodSpecBoxImageDriver {
    Unknown = 0;
    Docker  = 1;
    Rkt     = 2;
}

message PbVolumeMount {
    string name       = 1; // struct:object_slice_equal_skip
    bool   read_only  = 2;
    string mount_path = 3; // struct:object_slice_key
    string host_dir   = 4;
}

message PbServicePort {
    string name      = 1; // struct:object_slice_equal_skip
    uint32 box_port  = 2; // struct:object_slice_key
    uint32 host_port = 3;
}

message PbPodBoxStatusExecutor {
    string name          = 1; // struct:object_slice_key
    string phase         = 2;
    uint32 retry         = 3;
    uint32 error_code    = 4;
    string error_message = 5;
}

// PodBoxStatus represents the current information about a box
message PbPodBoxStatus {
    string                          name          = 1; // struct:object_slice_key
    PbPodSpecBoxImageDriver         image_driver  = 2;
    repeated Label                  image_options = 3;
    int64                           res_cpu_limit = 4;
    int64                           res_mem_limit = 5;
    repeated PbVolumeMount          mounts        = 6;
    repeated PbServicePort          ports         = 7;
    repeated string                 command       = 8;
    repeated PbPodBoxStatusExecutor executors     = 9;
    string                          phase         = 10;
    uint32                          started       = 11;
    uint32                          updated       = 12;
}

message PbOpLogSets {
    string                name    = 1;
    string                user    = 2;
    uint32                version = 3;
    repeated PbOpLogEntry items   = 4;
    uint32                updated = 5;
}

message PbOpLogEntry {
    string          name    = 1; // struct:object_slice_key
    repeated string status  = 2;
    string          message = 3;
    uint32          created = 4;
    uint32          updated = 5;
}

